# cetkaik_yhuap_move_candidates

./: Cargo.toml  README.md
src/: calculate_movable.rs  get_blocker_deltas.rs  lib.rs  main.rs  pure_move.rs  serialize.rs  test_cases.rs  tests.rs
src/calculate_movable/: iter.rs  vec.rs
src/tests/: from_hand_candidates.rs  from_hop1zuo1_candidates.rs  mod.rs  not_from_hand_candidates.rs  not_from_hop1zuo1_candidates.rs  test_cases.rs  test_not_from_hand_candidates_with_kut2tam2.rs  test_not_from_hop1zuo1_candidates_with_kut2tam2.rs
