[package]
name = "cetkaik_yhuap_move_candidates"
version = "0.7.1"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2021"
description = "See https://sites.google.com/view/cet2kaik/the-standardized-rule-in-english and https://github.com/sozysozbot/cerke_online_utility for context."
license = "MIT"
repository = "https://github.com/sozysozbot/cetkaik_yhuap_move_candidates"
exclude = [ "renovate.json" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cetkaik_compact_representation = "0.3.3"
cetkaik_core = "0.5.3"

[dependencies.num]
version = "0.4"
default-features = false
